--- a/ProyectoCoderApp/templates/ProyectoCoderApp/base.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/base.html
@@ -27,6 +27,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'cursos' %}">Cursos</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'estudiantes' %}">Estudiantes</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'profesores' %}">Profesores</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'buscar_comision' %}">Buscar</a></li>
                     </ul>
                 </div>
             </div>
