--- a/ProyectoCoderApp/templates/ProyectoCoderApp/profesores.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/profesores.html
@@ -22,7 +22,7 @@ Profesores - App Coder
                 </ul>
 
                 <a href="{% url 'agregar_profesor' %}">+ Agregar Nuevo Profesor</a>
-                <p> <a href="{% url 'buscar_profesor' %}"> + Buscar profesor</a></p>
+                {% comment %} <p> <a href="{% url 'buscar_profesor' %}"> + Buscar profesor</a></p> {% endcomment %}
             </div>
         </div>
     </div>
