--- a/ProyectoCoderApp/templates/ProyectoCoderApp/estudiantes.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/estudiantes.html
@@ -15,15 +15,15 @@ Estudiantes - App Coder
                 <ul class="list-group">
                         {% for estudiante in estudiantes %}
                             <li class="list-group-item d-flex justify-content-between align-items-start">
-                                {{estudiante.nombre}}
-                                <span class="badge bg-success rounded-pill">{{estudiante.apellido}}</span>
+                                {{estudiante.nombre}} {{estudiante.apellido}}
+                                
                             </li>
                         {% endfor %}
                     
                 </ul>
                 
                 <a href="{% url 'agregar_estudiante' %}">+ Agregar Nuevo Estudiante</a>
-                <p> <a href="{% url 'buscar_estudiante' %}"> + Buscar estudiante</a> </p>
+                {% comment %} <p> <a href="{% url 'buscar_estudiante' %}"> + Buscar estudiante</a> </p> {% endcomment %}
             </div>
         </div>
     </div>
