--- a/ProyectoCoderApp/templates/ProyectoCoderApp/index.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/index.html
@@ -12,12 +12,12 @@ Inicio - App Coder
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-6">
                 <div class="text-center my-5">
-                    <h1 class="display-5 fw-bolder text-white mb-2">Proyecto entregable Mesaglio Leonardo</h1>
+                    <h1 class="display-5 fw-bolder text-white mb-2">Proyecto entregable</h1>
                     <p class="lead text-white-50 mb-4">WEB DJANGO con patron MVT</p>
                     <div class="d-grid gap-3 d-sm-flex justify-content-sm-center">
-                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href="cursos">CURSOS</a>
-                        <a class="btn btn-outline-light btn-lg px-4" href="estudiantes">ESTUDIANTES</a>
-                        <a class="btn btn-outline-light btn-lg px-4" href="profesores">PROFESORES</a>
+                        <a class="btn btn-primary btn-lg px-4 me-sm-3" href= {% url 'cursos' %} >CURSOS</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href={% url 'estudiantes' %}>ESTUDIANTES</a>
+                        <a class="btn btn-outline-light btn-lg px-4" href={% url 'profesores' %}>PROFESORES</a>
                         
                     </div>
                 </div>
