Cambio estetico - agregue buttons

--- a/ProyectoCoderApp/templates/ProyectoCoderApp/cursos.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/cursos.html
@@ -22,8 +22,11 @@ Cursos - App Coder
                 
 
                 </ul>
-                <a href="{% url 'crear_curso' %}">+ Crear Nuevo Curso</a>
-                <p> <a href="{% url 'buscar_comision' %}"> + Buscar Cursos</a></p>
+                <p></p>
+                <a href="{% url 'crear_curso' %}"<button type="button" class="btn btn-primary">Crear Nuevo Curso</button></a>
+                <p></p>
+                <a href="{% url 'buscar_comision' %}"<p><button type="button" class="btn btn-primary">Buscar Curso</button></a>
+                </p>
             </div>
         </div>
     </div>
