--- a/ProyectoCoderApp/templates/ProyectoCoderApp/estudiantes.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/estudiantes.html
@@ -21,9 +21,9 @@ Estudiantes - App Coder
                         {% endfor %}
                     
                 </ul>
-                
-                <a href="{% url 'agregar_estudiante' %}">+ Agregar Nuevo Estudiante</a>
-                {% comment %} <p> <a href="{% url 'buscar_estudiante' %}"> + Buscar estudiante</a> </p> {% endcomment %}
+                <p></p>
+                <a href="{% url 'agregar_estudiante' %}"><button type="button" class="btn btn-primary">Agregar Estudiante</button></a>
+        
             </div>
         </div>
     </div>
