--- a/ProyectoCoderApp/templates/ProyectoCoderApp/profesores.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/profesores.html
@@ -20,8 +20,8 @@ Profesores - App Coder
                         {% endfor %}
                     
                 </ul>
-
-                <a href="{% url 'agregar_profesor' %}">+ Agregar Nuevo Profesor</a>
+                <p></p>
+                <a href="{% url 'agregar_profesor' %}"><button type="button" class="btn btn-primary">Agregar Profesor</button></a>
                 {% comment %} <p> <a href="{% url 'buscar_profesor' %}"> + Buscar profesor</a></p> {% endcomment %}
             </div>
         </div>
