--- a/ProyectoCoderApp/templates/ProyectoCoderApp/profesores.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/profesores.html
@@ -10,7 +10,9 @@ Profesores - App Coder
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-3">
-                Los profes son:
+                <p></p>
+                <b>PROFESORES</b>
+                <p></p>
                 <ul class="list-group">
                     {% for profesor in profesores %}
                             <li class="list-group-item d-flex justify-content-between align-items-start">
