--- a/ProyectoCoderApp/templates/ProyectoCoderApp/cursos.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/cursos.html
@@ -11,7 +11,9 @@ Cursos - App Coder
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-3">
-                Los cursos son:
+                <p></p>
+                <b>CURSOS:</b>
+                <p></p>
                 <ul class="list-group">
                     {% for curso in cursos %}
                         <li class="list-group-item d-flex justify-content-between align-items-start">
