--- a/ProyectoCoderApp/templates/ProyectoCoderApp/estudiantes.html
+++ b/ProyectoCoderApp/templates/ProyectoCoderApp/estudiantes.html
@@ -10,8 +10,9 @@ Estudiantes - App Coder
     <div class="container px-5">
         <div class="row gx-5 justify-content-center">
             <div class="col-lg-3">
-                Los estudiantes son: 
 
+                <b>ESTUDIANTES:</b> 
+                <p></p>
                 <ul class="list-group">
                         {% for estudiante in estudiantes %}
                             <li class="list-group-item d-flex justify-content-between align-items-start">
